# ebook-convert-api

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  compose.dev.yml  compose.yml  docker-compose.yml  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: docker-build.yml  lint.yml  test.yml
app/: config.py  main.py  state.py
app/api/: convert.py  formats.py  health.py  ui.py
app/core/: converter.py  formats.py  introspector.py  options_builder.py  options_schema.py
app/middleware/: auth.py
app/models/: introspection.py  options_universal.py
app/static/: app.js  index.html  styles.css
app/templates/: index.html
app/utils/: errors.py  tempfiles.py
data/: catalog.json
docker/: patch_calibre.py
scripts/: calibre_introspect.py  prune_calibre.py
tests/: conftest.py  test_api.py  test_convert.py
tests/cross-check/: check.py
tests/epub-test/: book.epub  test.py
tests/generate/: check.py
tests/integration/: conftest.py  test_api.py  test_convert.py
tests/unit/: conftest.py  test_convert_endpoint.py  test_core.py  test_endpoints.py  test_state.py
