[project]
name = "ebook-convert-api"
version = "0.1.0"
description = "HTTP API wrapping Calibre's ebook-convert pipeline"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",
    "pydantic-settings>=2.0",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = ["poethepoet>=0.32", "pyright>=1.1.410", "ruff>=0.15.17"]

[tool.poe.tasks]
lint = "ruff check app scripts"
fmt = "ruff format app scripts"
typecheck = "pyright"
generate-catalog = """
    calibre-debug
        -e scripts/calibre_introspect.py
        data/catalog.json
"""
build = "docker build -t ebook-convert-api ."
up = """
    docker run
        --rm
        -p 8000:8000
        --cpus=2
        --memory=2g
        --name ebook-convert
        ebook-convert-api
"""
dev = """
  docker run
    --rm
    -p 8000:8000
    --cpus=2
    --memory=4g
    -v ${POE_ROOT}/app:/app/app
    -v ${POE_ROOT}/data:/app/data
    -v ${POE_ROOT}/scripts:/app/scripts
    --name ebook-convert-dev
    ebook-convert-api
    /app/.venv/bin/uvicorn app.main:app
        --host 0.0.0.0
        --port 8000
        --reload
        --reload-dir /app/app
"""

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "I", # isort
    "UP", # pyupgrade
    "B", # flake8-bugbear
    "C4", # flake8-comprehensions
    "RUF", # ruff-specific

]
ignore = [
    "E501", # line too long (formatter handles it)
    "B008", # function calls in default arguments (FastAPI patterns use this)

]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.pyright]
pythonVersion = "3.14"
include = ["app"]
exclude = ["**/__pycache__", ".venv"]
typeCheckingMode = "standard"
# Calibre is not type-annotated and lives outside the project tree
reportMissingModuleSource = "none"
reportMissingImports = "none"
