[project]
name = "ebook-convert-api"
version = "0.2.0"
description = "HTTP API wrapping Calibre's ebook-convert pipeline"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",
    "pydantic-settings>=2.0",
    "jinja2>=3.1.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = [
    "poethepoet>=0.32",
    "pyright>=1.1.410",
    "ruff>=0.15.17",
    "pytest>=8",
    "pytest-cov>=7.1.0",
    "pytest-asyncio>=1.4.0",
    "httpx2>=2.4.0",
]

[tool.poe.tasks]
lint = "ruff check app scripts tests"
lint-fix = "ruff check --fix app scripts tests"
format = "ruff format app scripts tests"
format-check = "ruff format --check app scripts tests"
typecheck = "pyright"
test = "pytest tests/ -v"
test-unit = "pytest tests/unit -v"
test-int = "pytest tests/integration -v"
cov = "pytest tests/unit --cov --cov-branch --cov-report=term-missing --cov-report=html --cov-report=xml"
start = "uvicorn app.main:app --host 0.0.0.0 --port 8000"
watch = "uvicorn app.main:app --port 8000 --reload --reload-dir /app/app"
up = "docker compose up --build"
dev = "docker compose -f compose.dev.yml up --build"
dev-exec = "docker compose -f compose.dev.yml exec api bash"
catalog = "calibre-debug -e scripts/calibre_introspect.py data/catalog.json"
catalog-dev = """
    docker compose run --rm
        -v ./scripts:/app/scripts
        -v ./data:/app/data
        api
        calibre-debug -e /app/scripts/calibre_introspect.py ./data/catalog.json
"""

# Aggregate static checks — used by the Lint CI workflow and handy locally.
[tool.poe.tasks.check]
help = "Run lint, format check, and typecheck"
sequence = ["lint", "format-check", "typecheck"]
default_item_type = "ref"

# Write counterpart to `check`: auto-fix lint issues and format in place.
[tool.poe.tasks.fix]
help = "Auto-fix lint issues (ruff --fix) and format"
sequence = ["lint-fix", "format"]
default_item_type = "ref"

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "I", # isort
    "UP", # pyupgrade
    "B", # flake8-bugbear
    "C4", # flake8-comprehensions
    "RUF", # ruff-specific

]
ignore = [
    "E501", # line too long (formatter handles it)
    "B008", # function calls in default arguments (FastAPI patterns use this)

]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["app"]

[tool.coverage.report]
show_missing = true
exclude_also = [
    "if TYPE_CHECKING:",
]

[tool.pyright]
pythonVersion = "3.14"
include = ["app"]
exclude = ["**/__pycache__", ".venv"]
typeCheckingMode = "standard"
# Calibre is not type-annotated and lives outside the project tree
reportMissingModuleSource = "none"
reportMissingImports = "none"
